--- a/app/src/main/res/layout/activity_car_booking.xml
+++ b/app/src/main/res/layout/activity_car_booking.xml
@@ -139,7 +139,7 @@
                     <TextView
                         android:id="@+id/textView7"
                         android:layout_width="80dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
 
                         android:padding="2dp"
                         android:text="10/12/2020"
