--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -227,15 +227,16 @@
                     android:textColor="@android:color/black" />
 
             </LinearLayout>
+
             <TextView
                 android:id="@+id/dlno"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="DL No*"
+                android:textColor="#fff"
                 android:textSize="13sp"
                 android:textStyle="bold"
-                android:textColor="#fff"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.089"
                 app:layout_constraintStart_toStartOf="parent"
@@ -254,15 +255,16 @@
                 app:layout_constraintHorizontal_bias="0.488"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/dlno" />
+
             <TextView
                 android:id="@+id/aadharno"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="Aadhar Card No*"
+                android:textColor="#fff"
                 android:textSize="13sp"
                 android:textStyle="bold"
-                android:textColor="#fff"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.089"
                 app:layout_constraintStart_toStartOf="parent"
@@ -286,7 +288,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="Aadhar Card Snap*"
+                android:text="Aadhar Card Snap"
                 android:textSize="13sp"
                 android:textStyle="bold"
                 android:textColor="#fff"
@@ -336,7 +338,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="Upload DL No Snap*"
+                android:text="Upload DL No Snap"
 
                 android:textSize="13sp"
                 android:textStyle="bold"
